--- a/video2frames/Dockerfile
+++ b/video2frames/Dockerfile
@@ -1,6 +1,5 @@
-FROM python:3.7.10-slim-buster
+FROM python:3.7.10
 WORKDIR /app
-COPY requirements.txt requirements.txt
 COPY . .
 RUN pip3 install -r requirements.txt
 
