--- a/video2frames/requirements-client.txt
+++ b/video2frames/requirements-client.txt
@@ -1,10 +1,4 @@
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
-importlib-metadata==3.10.1
 jsonpickle==2.0.0
 Pillow==8.2.0
 requests==2.25.1
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-zipp==3.4.1
+tqdm==4.60.0
