--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "insightface"]
 	path = insightface
-	url = git@github.com:tae898/insightface.git
+	url = https://github.com/tae898/face.git
