--- a/video2frames/requirements.txt
+++ b/video2frames/requirements.txt
@@ -1,12 +1,5 @@
 av==8.0.3
-click==7.1.2
 Flask==1.1.2
-importlib-metadata==3.10.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
 jsonpickle==2.0.0
-MarkupSafe==1.1.1
 Pillow==8.2.0
-typing-extensions==3.7.4.3
-Werkzeug==1.0.1
-zipp==3.4.1
+tqdm
